kubernetes/resources_api/overlays/staging/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: resources-api
spec:
  template:
    spec:
      containers:
      - name: app
