kubernetes/resources_api/overlays/staging/database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opcode-postgres
spec:
  type: ExternalName
  externalName: resources-api-20190427.czwauqf3tjaz.us-east-2.rds.amazonaws.com
