kubernetes/resources_api/overlays/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: resources-api
spec:
  rules:
  - host: resources.staging.operationcode.org
    http:
      paths:
      - backend:
          serviceName: resources-api-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - resources.staging.operationcode.org
    secretName: resources-api-tls
